# nmm-mods-installer

./: .gitignore  Cargo.toml
src/: cli.rs  config.rs  main.rs  nm.rs
