[package]
name = "nmm-mods-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dialoguer = "0.11.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.22", features = ["json", "gzip", "cookies"] }
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
slug = "0.1.5"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
toml_edit = "0.21.0"
